Bug 1135589 - Make the focusring match the visible borders of the buttons in reader mode. r=florian, a=sledru

--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -257,6 +257,7 @@ body {
   border-left: 0;
   border-right: 0;
   border-bottom: 1px solid #c1c1c1;
+  padding: 0;
 }
 
 .button[hidden] {
